<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@color/purple_dark"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView android:id="@+id/nav_header_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/avt_default_man"
        android:contentDescription="@string/nav_header_desc"
        android:scaleType="centerCrop"
        android:background="@drawable/circle_shape"
        android:clipToOutline="true" />

    <TextView
        android:id="@+id/nav_header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:gravity="start" />

    <TextView
        android:id="@+id/nav_header_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textColor="@android:color/white"
        android:gravity="start" />

</LinearLayout>